.metadata/.plugins/org.eclipse.cdt.ui/BattleShip.build.log
16:34:24 **** Incremental Build of configuration Debug for project BattleShip ****
Info: Internal Builder is used for build
g++ -std=c++1y -O0 -g3 -Wall -c -fmessage-length=0 -Wall -Werror=return-type -o "myCode\\ConsoleView.o" "..\\myCode\\ConsoleView.cpp" 
..\myCode\ConsoleView.cpp: In member function 'void ConsoleView::print()':
..\myCode\ConsoleView.cpp:57:29: error: 'class OwnGrid' has no member named 'g'
   57 |             cout << ownGrid.g << " ";
      |                             ^
..\myCode\ConsoleView.cpp:65:30: error: 'class OpponentGrid' has no member named 'getCell'
   65 |             cout << oppoGrid.getCell(i, j) << " ";
      |                              ^~~~~~~

16:34:24 Build Failed. 2 errors, 0 warnings. (took 634ms)

